[package]
name = "tag_fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.9.1"
clap = "2.32"
libc = "0.2.51"
env_logger = "0.8"
log = "*"
lazy_static = "*"
sha3 = "0.9.1"
uuid = { version = "0.8", features = ["v4", "serde"] }
bincode = "1.3.1"
serde = {version = "1.0.102", features=["std", "derive"]}
